export const snapshot = {};

snapshot[`Issue Create Command - Help Text 1`] = `
stdout:
"
Usage: create

Writes: true     
Interactive: true

Description:

  Create a linear issue.                                                                                                                      
                                                                                                                                              
  Decide ownership before creating: read the project catalog (project list --all-teams --limit 0 --json), the candidate Project's full content
  (project view <id> --json), the related Initiative content (initiative view <id> --json), then check for an existing issue by its stable    
  source URL (issue query --all-teams --url). Without --project or --parent the command still creates the issue and then prints a reminder on 
  stderr. Order and entry points: linear guide issue-authoring.                                                                               
                                                                                                                                              
  For API Markdown bodies, prefer a bare Linear URL for mentions.                                                                             
  Named profile links can also mention people; \`@name\` handling varies by body.                                                               
  Get a person's canonical \`url\` from                                                                                                         
  \`linear team members <TEAM> --json\` or \`linear user list --json\`.                                                                           
  Run \`linear guide markdown\` for mentions, collapsible sections and rewrite risks.                                                           

Options:

  -h, --help                                - Show this help.                                                                                         
  -a, --assignee             <assignee>     - Assignee (user UUID, username, name, email, 'self', or '@me')                                           
  --due-date                 <date>         - Due date of the issue                                                                                   
  --parent                   <issue>        - Parent issue (UUID, identifier, number in the configured team, or Linear URL)                           
  -p, --priority             <priority>     - Priority (0/none, 1/urgent, 2/high, 3/medium, 4/low; names are case-insensitive)                        
  --estimate                 <estimate>     - Points estimate of the issue                                                                            
  -d, --description          <description>  - Description of the issue                                                                                
  --description-file         <path>         - Read UTF-8 description from a file (- for stdin; preferred for markdown content)                        
  -l, --label                <label>        - Issue label (UUID or name). May be repeated.                                                            
  --team                     <team>         - Team UUID or key (uses the configured default team when omitted)                                        
  --project                  <project>      - Project for the issue (UUID, slug ID, or name); choose it after reading the candidate Project and       
                                              Initiative content                                                                                      
  -s, --state                <state>        - Workflow state for the issue (UUID, name, or type)                                                      
  --milestone                <milestone>    - Project milestone (UUID, or name when --project is set)                                                 
  --cycle                    <cycle>        - Cycle name, number, 'active'/'now', 'next', 'previous', or a relative offset like +1 (use --cycle=-1    
                                              for negatives)                                                                                          
  --no-use-default-template                 - Do not use default template for the issue                                                               
  --no-interactive                          - Disable interactive prompts                                                                             
  -t, --title                <title>        - Title of the issue                                                                                      
  -j, --json                                - Output a JSON write result; the created issue is in data.issue (non-interactive only)                   

"
stderr:
""
`;

snapshot[`Issue Create Command - Happy Path 1`] = `
stdout:
"✓ Created issue ENG-123: Fix authentication bug
https://linear.app/test-team/issue/ENG-123/fix-authentication-bug
"
stderr:
"ENG-123 was created without --project or --parent. Ownership is decided from the candidate Project's full content and the related Initiative content, not from names: linear project list --all-teams --limit 0 --json, then project view <id> --json and initiative view <id> --json (linear guide issue-authoring). Set it with issue update ENG-123 --project <project>.
"
`;

snapshot[`Issue Create Command - With Milestone 1`] = `
stdout:
"✓ Created issue ENG-789: Test milestone feature
https://linear.app/test-team/issue/ENG-789/test-milestone-feature
"
stderr:
""
`;

snapshot[`Issue Create Command - Case Insensitive Label Matching 1`] = `
stdout:
"✓ Created issue ENG-456: Test case insensitive labels
https://linear.app/test-team/issue/ENG-456/test-case-insensitive-labels
"
stderr:
"ENG-456 was created without --project or --parent. Ownership is decided from the candidate Project's full content and the related Initiative content, not from names: linear project list --all-teams --limit 0 --json, then project view <id> --json and initiative view <id> --json (linear guide issue-authoring). Set it with issue update ENG-456 --project <project>.
"
`;

snapshot[`Issue Create Command - Short Flag -p Is Priority 1`] = `
stdout:
"✓ Created issue ENG-999: Test priority flag
https://linear.app/test-team/issue/ENG-999/test-priority-flag
"
stderr:
""
`;

snapshot[`Issue Create Command - With Cycle 1`] = `
stdout:
"✓ Created issue ENG-890: Test cycle feature
https://linear.app/test-team/issue/ENG-890/test-cycle-feature
"
stderr:
"ENG-890 was created without --project or --parent. Ownership is decided from the candidate Project's full content and the related Initiative content, not from names: linear project list --all-teams --limit 0 --json, then project view <id> --json and initiative view <id> --json (linear guide issue-authoring). Set it with issue update ENG-890 --project <project>.
"
`;

snapshot[`Issue Create Command - Unknown State Lists Valid States 1`] = `
stdout:
""
stderr:
"✗ Failed to create issue: Workflow state not found: 'Nope' for team ENG
  Valid states: \\"Todo\\" (unstarted), \\"In Progress\\" (started), \\"Done\\" (completed). Run \`linear team states ENG\` to list them.
"
`;
